menu navbar done

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -46,3 +46,14 @@
     font-weight: 500;
     font-size: 15px;
 }
+
+.header__menu > .MuiSvgIcon-root{
+    position:relative;
+    z-index: 2;
+    cursor: pointer;
+
+}
+
+.header__link--hidden{
+    visibility: hidden;
+}
