hover on display menu

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -14,6 +14,8 @@
     flex-direction: column;
     gap: 25px;
     min-width: 280px;
+  
+    border: 5px solid transparent;
   }
   
   /* Hide scrollbar for Chrome, Safari and Opera */
