--- a/src/components/Pages/Home.css
+++ b/src/components/Pages/Home.css
@@ -3,15 +3,17 @@
     display:grid;
     justify-content: center;
     align-items: center;
+  
 }
 
 .loading-home{
-    margin-top: 80px;
+ 
     left: 50%;
     height: 500px;
+    width: 100%;
     display:grid;
     justify-content: center;
     align-items: center;
-    margin-bottom: 200px;
+   
 }
 
