hover effect on navbar

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,8 +7,8 @@
     right:0;
     justify-content: space-between;
     align-items: center;
-    padding: 25px;
-    padding-top: 15px;
+    padding: 12px 25px;
+   
    
 }
 
@@ -22,7 +22,7 @@
 
 .header__links {
     display: flex;
-    gap: 15px;
+    /* gap: 15px; */
 }
 
 .header__links > a {
