working on motion

--- a/src/components/Pages/RoadMap/RoadMap.css
+++ b/src/components/Pages/RoadMap/RoadMap.css
@@ -1,5 +1,9 @@
 .main-timeline {
     position: relative;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    
   }
   
   .main-timeline:before {
