--- a/src/components/Pages/RoadMap/RoadMap.css
+++ b/src/components/Pages/RoadMap/RoadMap.css
@@ -3,7 +3,16 @@
     align-items: center;
     width: 100%;
     margin: 0 auto;
-    
+
+  }
+
+  .title{
+    color: #556270;
+	padding: 0;
+	margin-bottom: 20px;
+	line-height: 1;
+	font-size: 60px;
+	font-weight: 600;
   }
   
   .main-timeline:before {
