--- a/src/components/Pages/Perfil/Perfil.css
+++ b/src/components/Pages/Perfil/Perfil.css
@@ -29,8 +29,8 @@
 }
 
 .bg-c-lite-green {
-        background: -webkit-gradient(linear, left top, right top, from(#f29263), to(#ee5a6f));
-    background: linear-gradient(to right, #ee5a6f, #f29263);
+        background: -webkit-gradient(linear, left top, right top, from(#cf0b0b), to(#c0001d));
+    background: linear-gradient(to right, #dc0424, #d13030);
 }
 
 .user-profile {
